fix: Adjust HTML for cat info, add styling on card text and layout

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">Mouse</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -99,9 +99,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">String</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -129,9 +129,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">Catnip</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -159,9 +159,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">Spring</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -191,9 +191,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">String</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -221,9 +221,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">Mouse</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -251,9 +251,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">Fish</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
@@ -281,9 +281,9 @@
                 <h4 class="favorite-toy">Favorite Toy</h4>
                 <h4 class="toy">Spring</h4>
               </div>
-              <div class="attachments-section">
-                <h4 class="attachments">ATTACHMENTS</h4>
-                <h4 class="attachment-count">04</h4>
+              <div class="shots-section">
+                <h4 class="shots">Caught Up On Shots?</h4>
+                <h4 class="shots-two">Yes</h4>
               </div>
             </div>
           </section>
