fix: Adjust layout on cards and add space between top buttons in nav and icons

--- a/index.html
+++ b/index.html
@@ -11,34 +11,41 @@
       <title>Static Comp</title>
     </head>
     <body>
-      <nav>
-        <div class="top-section-nav">
-          <section class="list-items-container">
-            <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/all_cats.png" />All Cats
-            </button>
-            <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/resume.png" />Application
-            </button>
-            <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/donate.png" />Donate Here
-            </button>
+      <nav class="top-section-nav">
+        <section class="list-items-container">
+          <button class="nav-list-item">
+            <img
+              class="nav-icon"
+              src="./assets/all_cats.png"
+            />&nbsp&nbsp&nbspAll Cats
+          </button>
+          <button class="nav-list-item">
+            <img
+              class="nav-icon"
+              src="./assets/resume.png"
+            />&nbsp&nbsp&nbspApplication
+          </button>
+          <button class="nav-list-item">
+            <img
+              class="nav-icon"
+              src="./assets/donate.png"
+            />&nbsp&nbsp&nbspDonate Here
+          </button>
+        </section>
+        <section class="right-side-container">
+          <section class="user-container">
+            <img class="user-icon" src="./assets/user.png" alt="User Icon" />
+            <button class="username">Hello, Blanche!</button>
+            <img src="./assets/list.png" class="down-arrow" />
           </section>
-          <section class="right-side-container">
-            <section class="user-container">
-              <img class="user-icon" src="./assets/user.png" alt="User Icon" />
-              <button class="username">Hello, Blanche!</button>
-              <img src="./assets/list.png" class="down-arrow" />
-            </section>
-            <section class="site-logo">
-              <img
-                class="site-logo-image"
-                src="./assets/logo.png"
-                alt="Cat Logo"
-              />
-            </section>
+          <section class="site-logo">
+            <img
+              class="site-logo-image"
+              src="./assets/logo.png"
+              alt="Cat Logo"
+            />
           </section>
-        </div>
+        </section>
       </nav>
       <main>
         <section class="cats-view-container">
