feat: Add tabindex to interactive elements on page

--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
         </section>
       </nav>
       <main>
-        <section class="cats-view-container">
+        <section class="cats-view-container" tabindex="0">
           <section class="cats-view">Cats Available for Adoption</section>
         </section>
         <section class="cards-grid">
           <section class="card">
             <div class="top-section one">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -69,7 +70,7 @@
                 <h4 class="name">Chester</h4>
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
-              <div class="link-section">
+              <div class="link-section" tabindex="0">
                 <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
               <div class="toys-section">
@@ -85,6 +86,7 @@
           <section class="card">
             <div class="top-section two">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -100,7 +102,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
@@ -115,6 +119,7 @@
           <section class="card">
             <div class="top-section three">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -130,7 +135,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
@@ -145,6 +152,7 @@
           <section class="card">
             <div class="top-section four">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -160,7 +168,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
@@ -177,6 +187,7 @@
           <section class="card">
             <div class="top-section five">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -192,7 +203,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
@@ -207,6 +220,7 @@
           <section class="card">
             <div class="top-section six">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -222,7 +236,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
@@ -237,6 +253,7 @@
           <section class="card">
             <div class="top-section seven">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -252,7 +269,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
@@ -267,6 +286,7 @@
           <section class="card">
             <div class="top-section eight">
               <img
+                tabindex="0"
                 class="top-section-icon"
                 src="./assets/share.png"
                 alt="Share Icon"
@@ -282,7 +302,9 @@
                 <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
+                <h4 class="link" tabindex="0">
+                  http://catcatcatcatcatcatcatcatcat
+                </h4>
               </div>
               <div class="toys-section">
                 <h4 class="favorite-toy">Favorite Toy</h4>
